<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Gurmania</string>
    <string name="main_text_first">Welcome!</string>
    <string name="main_text_second">Gourmania is an application that will open up a limitless world of culinary ideas and inspiration for you. Try it and get inspired every day!</string>
    <string name="main_page_photo">main_page_photo</string>
    <string name="dish_of_the_day">Dish of the Day</string>
    <string name="channel_name">Recipe Notifications</string>
    <string name="channel_description">Daily dish notifications</string>
    <string name="tap_to_view">Tap to view the Dish of the Day</string>

    <string name="main_button">FIND RECIPES</string>
    <string name="search_hint">Recipe Search</string>
    <string name="text_back">Back</string>
    <string name="text_day">Recipe of the day</string>
    <string name="text_search">SEARCH</string>
    <string name="text_search_example">Enter the name of the dish</string>
    <string name="text_button_settings">Settings</string>
    <string name="text_button_favorites">Favorite dishes</string>
    <string name="text_favorites">You don\'t have any favorite recipes yet</string>
    <string name="search_text_ex">Enter the name of the dish</string>
    <string name="text_settings_language_main">System language</string>
    <string name="text_settings_language_ru">Russian</string>
    <string name="text_settings_language_en">English</string>
    <string name="text_settings_theme_main">Application Theme</string>
    <string name="text_settings_theme_white">Light</string>
    <string name="text_settings_theme_black">Dark</string>
    <string name="text_day_main_name">CAESAR</string>
    <string name="full_recipe">See the full recipe</string>
    <string name="text_day_description_kkal">168 kcal per 100g</string>
    <string name="text_day_description_belky">32% protein</string>
    <string name="text_day_description_zhiry">35% fat</string>
    <string name="text_day_description_uglevody">32% carbohydrates</string>
    <string name="text_day_recipe">Products: chicken fillet (200 g), Romaine lettuce (1 bunch), white bread (2 slices), parmesan (30 g), olive oil (2 tablespoons), garlic (1 clove), salt, pepper (to taste), mayonnaise (2 tablespoons), lemon juice (1 tbsp.), mustard (1 tsp.), anchovies (2 pcs.), garlic (1 clove).
Croutons: Cut bread into cubes, fry in a pan with garlic and olive oil until crisp.
Chicken: Fry the chicken fillet in a frying pan until golden brown, cut into pieces.
Sauce: Mix mayonnaise, lemon juice, mustard, chopped anchovies and garlic.
Salad: Lay out the lettuce leaves, add the chicken, croutons, and grate the parmesan cheese on top.
Serving: Fill with sauce and enjoy!</string>

    <string name="notification_text">Don\'t forget to try the new recipe!</string>
    <string name="notification_title">Recipe Reminder</string>

    <string name="details_ingredients">Ingredients</string>
    <string name="details_instructions">Instructions</string>
</resources>
