<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/red"
        android:fontFamily="@font/gabriela_normal"
        android:text="@string/text_button_settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="TextSizeCheck" />

    <!--android:fontFamily="@font/Manrope_Regular"-->

    <!--android:fontFamily="@font/Manrope_Bold"-->

    <!--android:fontFamily="@font/Manrope_Regular"-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="1000px"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_settings_language_main" />

        <RadioGroup
            android:id="@+id/languageGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/lang_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Русский" />

            <RadioButton
                android:id="@+id/lang_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_settings_theme_main" />

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/theme_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_settings_theme_white" />

            <RadioButton
                android:id="@+id/theme_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_settings_theme_black" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/backSettings"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/manrope_regular_correct"
        android:onClick="goBack"
        android:src="@drawable/main_page_photo"
        android:text="@string/text_back"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>