<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchActivity">

    <!--android:fontFamily="@font/Gabriela""-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/red"
        android:fontFamily="@font/gabriela_normal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        tools:ignore="TextSizeCheck" />

    <!--android:fontFamily="@font/Manrope_Regular"-->

    <!--android:fontFamily="@font/Manrope_Bold"-->

    <!--android:fontFamily="@font/Manrope_Regular"-->

    <!--android:fontFamily="@font/Manrope_Regular"-->

    <!--android:fontFamily="@font/Manrope_Regular"-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_bold_correct"
        android:text="@string/text_search"
        android:textAlignment="textStart"
        android:textColor="@color/dark_grey"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_day"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button_to_day"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/manrope_regular_correct"
        android:onClick="openDayFood"
        android:paddingLeft="6dp"
        android:paddingTop="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="6dp"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:src="@drawable/main_page_photo"
        android:text="@string/text_day"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/button_to_favorites"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/text_button_favorites"
        android:onClick="openFavorites"
        android:src="@drawable/ic_like"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <ImageButton
        android:id="@+id/button_to_settings"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/text_button_settings"
        android:onClick="openSettings"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/button_to_day"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>