<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FavoritesActivity">

    <!-- android:src="@drawable/ic_favorites" -->
    <!--android:fontFamily="@font/Manrope_Regular"-->

    <TextView
        android:id="@+id/favoritesHeader"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@color/red"
        android:fontFamily="@font/gabriela_normal"
        android:text="@string/text_button_favorites"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="129dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/text_back"
        android:fontFamily="@font/manrope_bold_correct"
        android:onClick="goBack"
        android:text="@string/text_back"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipesRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesRecyclerView"
        android:layout_width="393dp"
        android:layout_height="682dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoritesHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emptyFavoritesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_favorites"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        android:fontFamily="@font/manrope_regular_correct"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/favoritesHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>